report management design issues 1)tabs design 2) alignments,home page release alert showing no release found even when last week alerts available

--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -6659,6 +6659,11 @@ input.select2-active {
   z-index: 10;
   transition: 400ms all ease; }
 
+#report-management .tabs-left {
+  background: #fff; }
+  #report-management .tabs-left .tab-left {
+    border: 1px solid #ededed; }
+
 #report-management .svg-icon {
   width: 19px;
   height: 19px;
@@ -6668,7 +6673,7 @@ input.select2-active {
 #report-management .alerts-tabs {
   display: flex;
   position: relative;
-  margin-left: 13px;
+  margin-left: -1px;
   z-index: 0; }
   #report-management .alerts-tabs .tab {
     min-width: 0;
@@ -6695,7 +6700,7 @@ input.select2-active {
   #report-management .alerts-tabs .tab:hover > .blue-line {
     width: 100% !important; }
   #report-management .alerts-tabs .tab-active {
-    background: #fff; }
+    background: #ededed; }
   #report-management .alerts-tabs .tab-active > .blue-line {
     width: 100% !important; }
 
@@ -6706,7 +6711,7 @@ input.select2-active {
   width: 100% !important; }
 
 #report-management .tab-active {
-  background: #fff; }
+  background: #ededed; }
 
 #report-management .tab-active > .blue-line {
   width: 100% !important; }
@@ -6718,7 +6723,7 @@ input.select2-active {
 #report-management .configuration .fbibox-content {
   background-color: #ffffff;
   color: inherit;
-  padding: 1px;
+  padding: 0px;
   margin-top: 20px; }
 
 #report-management #email-setting {
